--- a/pom.xml
+++ b/pom.xml
@@ -4,4 +4,25 @@
     <groupId>com.toolkit</groupId>
     <artifactId>toolkit</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <java.version>1.8</java.version>
+        <gson.version>2.7</gson.version>
+        <xstream.version>1.4.9</xstream.version>
+    </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>${gson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.thoughtworks.xstream</groupId>
+            <artifactId>xstream</artifactId>
+            <version>${xstream.version}</version>
+        </dependency>
+    </dependencies>
 </project>
